--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -74,6 +74,9 @@
 	  <MauiXaml Update="Pages\SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\TestPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\TrainerBioPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
