--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -49,6 +49,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\cocoa_test_image.JPG" />
+	  <None Remove="Resources\Images\pug_test_image.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
