--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -61,6 +61,9 @@
 	  <Compile Update="Pages\DogProfilePage.xaml.cs">
 	    <DependentUpon>DogProfilePage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Pages\TrainerSearch.xaml.cs">
+	    <DependentUpon>TrainerSearch.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
