--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -55,6 +55,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Syncfusion.Maui.Gauges" Version="23.1.38" />
+		<PackageReference Include="Syncfusion.Maui.ImageEditor" Version="23.1.38" />
 		<PackageReference Include="Syncfusion.Maui.ListView" Version="23.1.36" />
 	</ItemGroup>
 
