--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -32,7 +32,8 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-			<MauiIcon Include="Resources\AppIcon\appicon.svg" />
+    <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'anroid'" BaseSize="128,128" Color ="#FFFFFF" Include="Resources\AppIcon\appicon.svg" />
+    <MauiIcon Include="Resources\AppIcon\appicon.svg" />
 		<!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\splash.svg" BaseSize="128,128" />
 		<!-- Images -->
@@ -47,8 +48,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\cake.png" />
+	  <None Remove="Resources\Images\calendar.png" />
 	  <None Remove="Resources\Images\cocoa_test_image.JPG" />
 	  <None Remove="Resources\Images\pug_test_image.jpg" />
+	  <None Remove="Resources\Images\skill_level_bar_0.svg" />
+	  <None Remove="Resources\Images\skill_level_bar_1.svg" />
+	  <None Remove="Resources\Images\skill_level_bar_2.svg" />
+	  <None Remove="Resources\Images\skill_level_bar_3.svg" />
+	  <None Remove="Resources\Images\skill_level_bar_4.svg" />
+	  <None Remove="Resources\Images\skill_level_bar_5.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
