--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -49,6 +49,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Pages\**" />
+	  <Compile Remove="Pages\**" />
+	  <EmbeddedResource Remove="Pages\**" />
+	  <MauiCss Remove="Pages\**" />
+	  <MauiXaml Remove="Pages\**" />
+	  <None Remove="Pages\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Resources\Images\cocoa_test_image.JPG" />
 	  <None Remove="Resources\Images\pug_test_image.jpg" />
 	</ItemGroup>
@@ -56,51 +65,6 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Syncfusion.Maui.ListView" Version="23.1.36" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Compile Update="Pages\DogProfilePage.xaml.cs">
-	    <DependentUpon>DogProfilePage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\General.xaml.cs">
-	    <DependentUpon>General.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\DataExportPage.xaml.cs">
-	    <DependentUpon>DataExportPage.xaml</DependentUpon>
-	  </Compile>
-	  <Compile Update="Pages\TrainerSearch.xaml.cs">
-	    <DependentUpon>TrainerSearch.xaml</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiXaml Update="Pages\AccountPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\DogProfilePage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\DogsPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\HomePage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\General.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\DataExportPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\SettingsPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\TestPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\TrainerBioPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
