--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Fonts\defaultpfp.png" />
 	  <None Remove="Resources\Images\cake.png" />
 	  <None Remove="Resources\Images\calendar.png" />
 	  <None Remove="Resources\Images\cocoa_test_image.JPG" />
@@ -59,6 +60,10 @@
 	  <None Remove="Resources\Images\skill_level_bar_3.svg" />
 	  <None Remove="Resources\Images\skill_level_bar_4.svg" />
 	  <None Remove="Resources\Images\skill_level_bar_5.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiFont Include="Resources\Images\defaultpfp.png" />
 	</ItemGroup>
 
 	<ItemGroup>
