Added Image capability

--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -33,8 +33,8 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-    <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'anroid'" BaseSize="128,128" Color="#FFFFFF" Include="Resources\AppIcon\appicon.svg" />
-    <MauiIcon Include="Resources\AppIcon\appicon.svg" />
+    <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" ForegroundScale="0.5" Resize="false" Color="#FFFFFF" Include="Resources\AppIcon\appicon.svg" />
+
 		<!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\splash.svg" BaseSize="128,128" />
 		<!-- Images -->
@@ -67,6 +67,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Syncfusion.Maui.Calendar" Version="23.1.42" />
 		<PackageReference Include="Syncfusion.Maui.Gauges" Version="23.1.38" />
