--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -58,6 +58,7 @@
 	  <None Remove="Resources\Images\dogs.png" />
 	  <None Remove="Resources\Images\general.png" />
 	  <None Remove="Resources\Images\home.png" />
+	  <None Remove="Resources\Images\hometran.png" />
 	  <None Remove="Resources\Images\pug_test_image.jpg" />
 	  <None Remove="Resources\Images\refresh.png" />
 	  <None Remove="Resources\Images\skill_level_bar_0.svg" />
