--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -51,11 +51,14 @@
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\defaultpfp.png" />
 	  <None Remove="Resources\Images\behaviors.png" />
+	  <None Remove="Resources\Images\behaviorstrans.png" />
 	  <None Remove="Resources\Images\cake.png" />
 	  <None Remove="Resources\Images\calendar.png" />
 	  <None Remove="Resources\Images\calendaricon.png" />
+	  <None Remove="Resources\Images\calendartran.png" />
 	  <None Remove="Resources\Images\cocoa_test_image.JPG" />
 	  <None Remove="Resources\Images\dogs.png" />
+	  <None Remove="Resources\Images\dogstran.png" />
 	  <None Remove="Resources\Images\general.png" />
 	  <None Remove="Resources\Images\home.png" />
 	  <None Remove="Resources\Images\hometran.png" />
