--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -100,6 +100,9 @@
 	  <Compile Update="Pages\DataExportPage.xaml.cs">
 	    <DependentUpon>DataExportPage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Pages\SessionPage.xaml.cs">
+	    <DependentUpon>SessionPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\TrainerSearch.xaml.cs">
 	    <DependentUpon>TrainerSearch.xaml</DependentUpon>
 	  </Compile>
@@ -116,6 +119,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\CalenderPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\ChangeTrickPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\DogProfilePage.xaml">
@@ -142,10 +148,16 @@
 	  <MauiXaml Update="Pages\PlanSession.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\Session.xaml">
+	  <MauiXaml Update="Pages\SessionPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\SessionSummaryPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\StartSessionPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\TestPage.xaml">
